[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/PlayerPedrosa.gd" type="Script" id=1]
[ext_resource path="res://Player/IdleSide.png" type="Texture" id=2]
[ext_resource path="res://Player/Running.png" type="Texture" id=3]
[ext_resource path="res://Audio/ManDying.wav" type="AudioStream" id=4]
[ext_resource path="res://Player/Dying.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 3.0
height = 1.5

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 2.8
height = 1.9

[sub_resource type="Animation" id=7]

resource_name = "Die"
length = 2.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("DyingSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4, 1.6, 1.8, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RunSpritesheet:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DyingSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("RunSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]

resource_name = "Damage"
length = 1.5
loop = false
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.410156, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer2D:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Area2D" type="Area2D" parent="." index="0"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 0, 4 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ShotTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = false

[node name="Sprite" type="Sprite" parent="." index="2"]

scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 2
hframes = 2
region_rect = Rect2( 5, 1, 20, 24 )
_sections_unfolded = [ "Animation", "Region", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]

position = Vector2( 0, 4 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Die = SubResource( 7 )
anims/Idle = SubResource( 4 )
anims/Run = SubResource( 5 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="RunSpritesheet" type="Sprite" parent="." index="5"]

position = Vector2( 0, 2 )
scale = Vector2( 1.96429, 1.96429 )
texture = ExtResource( 3 )
vframes = 3
hframes = 3
frame = 1
_sections_unfolded = [ "Animation", "Region", "Visibility" ]

[node name="InvincibilityTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.5
one_shot = false
autostart = false

[node name="AnimationInvencibilidade" type="AnimationPlayer" parent="." index="7"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Damage = SubResource( 6 )
blend_times = [  ]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="8"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
__meta__ = {
"_edit_lock_": true
}

[node name="DyingSprite" type="Sprite" parent="." index="9"]

visible = false
scale = Vector2( 1.95536, 1.95536 )
texture = ExtResource( 5 )
vframes = 4
hframes = 4
frame = 12
_sections_unfolded = [ "Animation", "Visibility" ]

[connection signal="died" from="." to="." method="_on_Player_died"]

[connection signal="shot" from="." to="." method="_on_Player_shot"]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]


